# Game-Engine

./: .gitignore
C++/GameEngineCpp/: CMakeLists.txt
C++/GameEngineCpp/doc/: index.html  script.js  styles.css
C++/GameEngineCpp/doc/nova-game-engine/: App.js  index.html
C++/GameEngineCpp/src/: CMakeLists.txt  GameEngineCpp.cpp  GameEngineCpp.h  Testing.cpp  Testing.h
C++/GameEngineCpp/src/math/: CMakeLists.txt  MathUtils.cpp  Matrix.cpp  Matrix.h  Matrix3x3.cpp  Pose2.cpp  Pose3.cpp  Rot3.cpp  Transform2.cpp  Transform3.cpp  Vec2.cpp  Vec3.cpp  Vector3.cpp  Vector3.h
C++/GameEngineCpp/src/math/include/math/: MathUtils.hpp  Matrix3x3.hpp  Pose2.hpp  Pose3.hpp  Rot3.hpp  Transform2.hpp  Transform3.hpp  Vec2.hpp  Vec3.hpp
C++/GameEngineCpp/src/os/include/: Application.hpp  GameEngine.hpp
C++/GameEngineCpp/src/os/linux/: Application.cpp  GameEngine.cpp
C++/GameEngineCpp/src/os/windows/: GameEngine.cpp
C++/GameEngineCpp/src/physics/: AABB.cpp  CMakeLists.txt  Circle.cpp  CollisionDetection.cpp  OBB.cpp  OrientedRect.cpp  Rect.cpp  Sphere.cpp
C++/GameEngineCpp/src/physics/include/physics/: Collider2.hpp  Collider3.hpp  CollisionDetection.hpp  Ray2.hpp  Ray3.hpp
C++/GameEngineCpp/src/physics/include/physics/2d-colliders/: Circle.hpp  Collider2.hpp  OrientedRect.hpp  Ray2.hpp  Rect.hpp
C++/GameEngineCpp/src/physics/include/physics/3d-colliders/: AABB.hpp  Collider3.hpp  OBB.hpp  Ray3.hpp  Sphere.hpp
framework/: FileIO.java
framework/AI/: Boids2D.java
framework/audio/: Music.java
framework/gameObject/: DynamicObject2D.java  DynamicObject3D.java  (+1 more)
(+41 files in other folders)
